about social links spacing fix

--- a/src/pages/AboutPage/index.module.scss
+++ b/src/pages/AboutPage/index.module.scss
@@ -86,6 +86,7 @@
   font-size: 24px;
   text-decoration: none;
   outline-color: $bayoux-blue;
+  padding: 5px;
 
   &:hover {
     color: $spring-green;
